sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
	for (i->getNombreValeurs()-2 to 0) {
		for (j<-1 to i) {
		if (plusPetit(i+1,i)) {
			echange(i,i+1)
			inverse=true	
			}
			}
	} 
}
